--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
 
     <!-- 🔷 FOOTER -->
     <div class="text-center text-muted mt-4">
-        <small>Checkout the full repository on <a href="https://github.com/jayantsingh0702/AI-based-Fitness-level-tracker/tree/main">Github</a></small>
+        <small>Checkout the full repository on <a href="https://github.com/jayantsingh0702/AI-based-Fitness-level-tracker/tree/main" target="_blank">Github</a></small>
         <small>© AI-Based Fitness Level Predictor | Academic Project</small>
     </div>
 
