--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,21 @@
 
 <!-- 🔷 RESULT -->
 <section id="result">
-    
+     {% if result %}
+    <div class="card shadow p-4 mb-4" id="resultSection">
+        <h4 class="text-center mb-3">Fitness Report</h4>
+
+        <p><strong>Name:</strong> {{ result.name }}</p>
+        <p><strong>BMI:</strong> {{ result.bmi }}</p>
+
+        <p><strong>Fitness Level:</strong>
+            <span class="badge 
+                {% if result.fitness == 'Low' %}bg-danger
+                {% elif result.fitness == 'Medium' %}bg-warning
+                {% else %}bg-success{% endif %}">
+                {{ result.fitness }}
+            </span>
+        </p>
 </section>
 
 <!-- 🔷 DISCLAIMER -->
